Fix nav on mobile

--- a/assets/sass/partials/_nav.scss
+++ b/assets/sass/partials/_nav.scss
@@ -1,12 +1,10 @@
 @import "_colors.scss";
 
 .nav {
-  @media (min-width: 900px) {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: center;
-  }
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
   color: $fg-off-white;
   background: $bg-dark-blue;
   font-family: Raleway, sans-serif;
@@ -34,11 +32,6 @@
   height: 100%;
 
   li {
-    // @media not screen and (min-width: 900px) {
-    //   display: block;
-    //   margin-top: 2em;
-    //   text-align: center;
-    // }
     display: block;
     height: 100%;
     a {
@@ -46,7 +39,6 @@
       display: flex;
       align-items: center;
       padding: 0 0.5em;
-
     }
     a:hover {
       background: $bg-darker-blue;
@@ -58,7 +50,20 @@
   display: none; // when not on mobile
 }
 
+// Crunch width display
 @media not screen and (min-width: 900px) {
+  .nav {
+    flex-flow: column nowrap;
+    align-items: flex-start;
+  }
+  .nav__list {
+    flex-flow: column nowrap;
+    width: 100%;
+
+    li a {
+      padding: 1em;
+    }
+  }
   .nav__list--mobile-hidden {
     display: none;
   }
@@ -68,9 +73,9 @@
     border: 0;
     background-color: inherit;
     color: inherit;
-    font-size: 1.5em;
     // HACK this is pretty janky alignment, but it works!
-    right: 1 * $space;
-    top: 0.5 * $space;
+    font-size: 1.25em;
+    right: 0;
+    top: 0;
   }
 }
